Fix mermaid.js charts alignment and font size and Customize feature article's image caption

--- a/static/css/story.css
+++ b/static/css/story.css
@@ -426,3 +426,6 @@ img[src~="3dbook"] {
 .hljs-link {
   text-decoration: underline;
 }
+.mermaid {
+  text-align: center;
+}
